{
  "version": 4,
  "terraform_version": "1.8.4",
  "serial": 166,
  "lineage": "d1310948-5b46-470d-bb71-6c138dcbdf25",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "us_east_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us_east_1",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e001c9271cf7f3b9",
            "arn": "arn:aws:ec2:us-east-1:710151142422:instance/i-0f6a48def5a980b80",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f6a48def5a980b80",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.small",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0484187f1b865e726",
            "private_dns": "ip-10-0-1-226.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.226",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-06946cf3751b93f98",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04f08a62cd7250b3a",
            "tags": {
              "Name": "us-east-1-instance"
            },
            "tags_all": {
              "Name": "us-east-1-instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-05f1680354f3b99e5"
            ]
          },
          "dependencies": [
            "module.network_us_east_1.aws_subnet.main",
            "module.network_us_east_1.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "us_east_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us_east_2",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09040d770ffe2224f",
            "arn": "arn:aws:ec2:us-east-2:710151142422:instance/i-0b921dfb61bf5da38",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b921dfb61bf5da38",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.small",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-07d1a244a103db30e",
            "private_dns": "ip-10-1-1-80.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.1.1.80",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-063b479ff625f7094",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0fd85643ba79a4f6f",
            "tags": {
              "Name": "us-east-2-instance"
            },
            "tags_all": {
              "Name": "us-east-2-instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-04cb75192155057ae"
            ]
          },
          "dependencies": [
            "module.network_us_east_2.aws_subnet.main",
            "module.network_us_east_2.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network_us_east_1",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us_east_1",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:710151142422:internet-gateway/igw-0ec5fd9cab9653feb",
            "id": "igw-0ec5fd9cab9653feb",
            "owner_id": "710151142422",
            "tags": {
              "Name": "us-east-1-igw"
            },
            "tags_all": {
              "Name": "us-east-1-igw"
            },
            "vpc_id": "vpc-0bbef5270c1e70195"
          },
          "dependencies": [
            "module.network_us_east_1.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network_us_east_1",
      "mode": "managed",
      "type": "aws_route",
      "name": "default_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us_east_1",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0ec5fd9cab9653feb",
            "id": "r-rtb-0e230df5f8cabb4081080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0e230df5f8cabb408",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network_us_east_1.aws_internet_gateway.main",
            "module.network_us_east_1.aws_route_table.main",
            "module.network_us_east_1.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network_us_east_1",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us_east_1",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:710151142422:route-table/rtb-0e230df5f8cabb408",
            "id": "rtb-0e230df5f8cabb408",
            "owner_id": "710151142422",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "us-east-1-route-table"
            },
            "tags_all": {
              "Name": "us-east-1-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bbef5270c1e70195"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network_us_east_1.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network_us_east_1",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us_east_1",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b98a878e3e75baa8",
            "route_table_id": "rtb-0e230df5f8cabb408",
            "subnet_id": "subnet-04f08a62cd7250b3a"
          },
          "dependencies": [
            "module.network_us_east_1.aws_route_table.main",
            "module.network_us_east_1.aws_subnet.main",
            "module.network_us_east_1.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-061bb9ac7492ad9f2",
            "route_table_id": "rtb-0e230df5f8cabb408",
            "subnet_id": "subnet-09869c56d10b24d77"
          },
          "dependencies": [
            "module.network_us_east_1.aws_route_table.main",
            "module.network_us_east_1.aws_subnet.main",
            "module.network_us_east_1.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network_us_east_1",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us_east_1",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:710151142422:subnet/subnet-04f08a62cd7250b3a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04f08a62cd7250b3a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "710151142422",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "us-east-1-subnet-1"
            },
            "tags_all": {
              "Name": "us-east-1-subnet-1"
            },
            "vpc_id": "vpc-0bbef5270c1e70195"
          },
          "dependencies": [
            "module.network_us_east_1.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:710151142422:subnet/subnet-09869c56d10b24d77",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09869c56d10b24d77",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "710151142422",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "us-east-1-subnet-2"
            },
            "tags_all": {
              "Name": "us-east-1-subnet-2"
            },
            "vpc_id": "vpc-0bbef5270c1e70195"
          },
          "dependencies": [
            "module.network_us_east_1.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network_us_east_1",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us_east_1",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:710151142422:vpc/vpc-0bbef5270c1e70195",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-025e695e921c5f484",
            "default_route_table_id": "rtb-0bd5de790b8dbba94",
            "default_security_group_id": "sg-05f1680354f3b99e5",
            "dhcp_options_id": "dopt-028e295d08cb44e6a",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0bbef5270c1e70195",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0bd5de790b8dbba94",
            "owner_id": "710151142422",
            "tags": {
              "Name": "us-east-1-vpc"
            },
            "tags_all": {
              "Name": "us-east-1-vpc"
            }
          }
        }
      ]
    },
    {
      "module": "module.network_us_east_2",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us_east_2",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:710151142422:internet-gateway/igw-0482964456e25a700",
            "id": "igw-0482964456e25a700",
            "owner_id": "710151142422",
            "tags": {
              "Name": "us-east-2-igw"
            },
            "tags_all": {
              "Name": "us-east-2-igw"
            },
            "vpc_id": "vpc-09e6a307fa2b5369a"
          },
          "dependencies": [
            "module.network_us_east_2.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network_us_east_2",
      "mode": "managed",
      "type": "aws_route",
      "name": "default_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us_east_2",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0482964456e25a700",
            "id": "r-rtb-07160dee419cf2d671080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-07160dee419cf2d67",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network_us_east_2.aws_internet_gateway.main",
            "module.network_us_east_2.aws_route_table.main",
            "module.network_us_east_2.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network_us_east_2",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us_east_2",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:710151142422:route-table/rtb-07160dee419cf2d67",
            "id": "rtb-07160dee419cf2d67",
            "owner_id": "710151142422",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "us-east-2-route-table"
            },
            "tags_all": {
              "Name": "us-east-2-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-09e6a307fa2b5369a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network_us_east_2.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network_us_east_2",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us_east_2",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0120cb3933fb221cb",
            "route_table_id": "rtb-07160dee419cf2d67",
            "subnet_id": "subnet-0fd85643ba79a4f6f"
          },
          "dependencies": [
            "module.network_us_east_2.aws_route_table.main",
            "module.network_us_east_2.aws_subnet.main",
            "module.network_us_east_2.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03a0c298139b27c7b",
            "route_table_id": "rtb-07160dee419cf2d67",
            "subnet_id": "subnet-0b5c360c0855036c4"
          },
          "dependencies": [
            "module.network_us_east_2.aws_route_table.main",
            "module.network_us_east_2.aws_subnet.main",
            "module.network_us_east_2.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network_us_east_2",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us_east_2",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:710151142422:subnet/subnet-0fd85643ba79a4f6f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.1.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fd85643ba79a4f6f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "710151142422",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "us-east-2-subnet-1"
            },
            "tags_all": {
              "Name": "us-east-2-subnet-1"
            },
            "vpc_id": "vpc-09e6a307fa2b5369a"
          },
          "dependencies": [
            "module.network_us_east_2.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:710151142422:subnet/subnet-0b5c360c0855036c4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.1.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b5c360c0855036c4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "710151142422",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "us-east-2-subnet-2"
            },
            "tags_all": {
              "Name": "us-east-2-subnet-2"
            },
            "vpc_id": "vpc-09e6a307fa2b5369a"
          },
          "dependencies": [
            "module.network_us_east_2.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network_us_east_2",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us_east_2",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:710151142422:vpc/vpc-09e6a307fa2b5369a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-0e77a24edbaed2682",
            "default_route_table_id": "rtb-0490f5f85b16aa8ef",
            "default_security_group_id": "sg-04cb75192155057ae",
            "dhcp_options_id": "dopt-0fb8e8aa8eb544a88",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-09e6a307fa2b5369a",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0490f5f85b16aa8ef",
            "owner_id": "710151142422",
            "tags": {
              "Name": "us-east-2-vpc"
            },
            "tags_all": {
              "Name": "us-east-2-vpc"
            }
          }
        }
      ]
    }
  ]
}